<resources>
    <string name="app_name">GranCentre</string>
    <string name="titulo1">Gran Centre</string>
    <string name="tituloHotels">HOTELS</string>
    <string-array name="restaurants_array">
        <item>Tots</item>
        <item>Italià</item>
        <item>Japones</item>
        <item>Menjar Rapid</item>
    </string-array>

    <string-array name="estrellas_array">

        <item>Todos</item>
        <item>1 Estrella</item>
        <item>2 Estrellas</item>
        <item>3 Estrellas</item>
        <item>4 Estrellas</item>
        <item>5 Estrellas</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adreca1">Plaza dels Paisos Catalans s n 08014, Barcelona</string>
    <string name="adreca2">Carrer de la Creu Coberta 20 8014, Barcelona </string>
    <string name="adreca3">Avinguda Diagonal 414. 08037, Barcelona</string>
    <string name="adreca4">Rambla del Raval 17-21 08001, Barcelona</string>
    <string name="adreca5">Paseo Garcia Faria 37 47 08019, Barcelona</string>
    <string name="adreca6">Avenida del Decano s n.21101,Punta Umbría</string>
    <string name="adreca7">Avda del Mar 6 35508, Costa Teguise</string>
    <string name="adreca8">Avenida Gran Canaria 38. 35100, Playa del Inglés</string>
    <string name="adreca9">UrbLoma Sancti Petri s n. 11139, Cádiz</string>
    <string name="adreca10">Playa Bavaro KM 1 no 1. 03177, Punta Cana</string>
    <string name="adreca11">Plaza de Espana 18. 28008, Madrid</string>
    <string name="adreca12">Calle La Hondura 8 38683, Puerto Santiago</string>
    <string name="adreca13">Avenida Alvaro Alonso Barba 41092, Sevilla</string>
    <string name="adreca14">Paseo Campo Volantin 11 48007, Bilbao</string>
    <string name="adreca15">Avenida del Castillo SN Caleta de Fuste. 35610, Antigua</string>
    <string name="titulomovies">Películas</string>
    <string name="t1">Avatar</string>
    <string name="t2">Avatar 2</string>
    <string name="t3">Black Panther: Wakanda Forever</string>
    <string name="t4">Smile</string>
    <string name="t5">Lilo, mi amigo el cocodrilo</string>
    <string name="t6">Black Adam</string>
    <string name="t7">COMING SOON</string>


</resources>