<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movies"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    android:gravity="center">
    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/back"
        android:onClick="onClick"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:text="@string/titulomovies"
        android:layout_marginBottom="20dp"
        />




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <androidx.cardview.widget.CardView

                android:id="@+id/M1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/avatar"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="vertical">
                <TextView
                    android:id="@+id/T1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/t1"
                    android:layout_marginHorizontal="20dp"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    />
                    <TextView
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Primera película de avatar, dirigida por James Cameron"/>

                </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/M2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/avatar2"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/T2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/t2"
                        android:layout_marginHorizontal="20dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        />
                    <TextView
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Secuela de avatar, dirigida por el mismo director"
                        />

                </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/M3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/blackpanther"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/T3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/t3"
                        android:layout_marginHorizontal="20dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        />
                    <TextView
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Secuela de Black Panther"/>

                </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/M4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/smile"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/T4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/t4"
                        android:layout_marginHorizontal="20dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        />

                    <TextView
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pelicula de terror, los uqe sonrien se suicidan"/>

                </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/M5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/lilo"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/T5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/t5"
                        android:layout_marginHorizontal="20dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        />
                    <TextView
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Un cocodrilo que quiere ser cantante y está dispuesto a todo para conseguirlo"/>


                </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/M6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/blackadam"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|top"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/T6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/t6"
                        android:layout_marginHorizontal="20dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        />
                    <TextView
                        android:layout_margin="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Un hombre con grandes poderes. Se convertira en héroe o villano?"/>
                </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView

                android:id="@+id/M7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@color/cardview_dark_background"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/T7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/t7"
                        android:layout_marginHorizontal="20dp"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>


</LinearLayout>